cli/tests/testdata/inline_js_source_map_with_contents_from_graph.js.out
error: Uncaught Error: Hello world!
// throw new Error("Hello world!" as string);
      ^
    at http://localhost:4545/inline_js_source_map.ts:6:7
